# SlicerAdapterSuperviselyCV

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  setup.cfg
.github/workflows/: build_installation_files.yml
AdapterSuperviselyCV/: CMakeLists.txt  labelingJobsAnnotation.py  labelingJobsReview.py
AdapterSuperviselyCV/Resources/UI/: labelingJobsAnnotation.ui  labelingJobsReview.ui
AdapterSuperviselyCV/moduleLib/: __init__.py  segmentation.py  ui.py  utils.py
ConnectToSupervisely/: CMakeLists.txt  labelingJobsAnnotating.py  labelingJobsAnnotation.py  labelingJobsReview.py  labelingJobsReviewing.py
ConnectToSupervisely/Resources/UI/: labelingJobsAnnotating.ui  labelingJobsAnnotation.ui  labelingJobsReview.ui  labelingJobsReviewing.ui
ConnectToSupervisely/moduleLib/: baseLogic.py  ui.py  utils.py
